--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = '17'
 
 repositories {
 	mavenCentral()
@@ -21,6 +21,8 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok:1.18.22'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.1'
+	testImplementation 'com.squareup.okhttp3:mockwebserver:4.9.3'
+	testImplementation 'com.squareup.okhttp3:okhttp:4.9.3'
 }
 
 test {
