--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,11 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok:1.18.22'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.1'
+
 	testImplementation 'com.squareup.okhttp3:mockwebserver:4.9.3'
 	testImplementation 'com.squareup.okhttp3:okhttp:4.9.3'
+
+	testImplementation 'com.github.tomakehurst:wiremock:2.27.2'
 }
 
 test {
