Use reactor-test

--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
 	testImplementation 'com.squareup.okhttp3:okhttp:4.9.3'
 
 	testImplementation 'com.github.tomakehurst:wiremock:2.27.2'
+	testImplementation 'io.projectreactor:reactor-test:3.4.13'
 }
 
 test {
